--- a/src/components/alertBEM.css
+++ b/src/components/alertBEM.css
@@ -1,23 +1,23 @@
 :root {
-  --alert-color-background-info: #3232FF;
-  --alert-color-background-error: #DE2B2B;
-  --alert-color-background-warning: #F2E800;
-  --alert-color-background-success: #82B90D;
-  --alert-color-text-info: #FFFFFF;
-  --alert-color-text-error: #FFFFFF;
-  --alert-color-text-warning: #000000;
-  --alert-color-text-success: #FFFFFF;
-  --alert-color-icon-info: "ⓘ";
-  --alert-color-icon-error: "☠️";
-  --alert-color-icon-warning: "⚠";
-  --alert-color-icon-success: "🎉";
+  --tokens-alert-color-background-info: #3232FF;
+  --tokens-alert-color-background-error: #DE2B2B;
+  --tokens-alert-color-background-warning: #F2E800;
+  --tokens-alert-color-background-success: #82B90D;
+  --tokens-alert-color-text-info: #FFFFFF;
+  --tokens-alert-color-text-error: #FFFFFF;
+  --tokens-alert-color-text-warning: #000000;
+  --tokens-alert-color-text-success: #FFFFFF;
+  --tokens-alert-color-icon-info: "ⓘ";
+  --tokens-alert-color-icon-error: "☠️";
+  --tokens-alert-color-icon-warning: "⚠";
+  --tokens-alert-color-icon-success: "🎉";
 }
 
 .alert {
-  background: var(--alert-color-background-info);
+  background: var(--tokens-alert-color-background-info);
   border-radius: 3px;
-  box-shadow: 0 0px 8px #303030;
-  color: var(--alert-color-text-info);
+  box-shadow: 0 0px 8px #251f1f;
+  color: var(--tokens-alert-color-text-info);
   font-family: 'Roboto', sans-serif;
   margin: 0 auto 32px;
   max-width: 500px;
@@ -26,18 +26,18 @@
 }
 
 .alert--error {
-  background: var(--alert-color-background-error);
-  color: var(--alert-color-text-error);
+  background: var(--tokens-alert-color-background-error);
+  color: var(--tokens-alert-color-text-error);
 }
 
 .alert--warning {
-  background: var(--alert-color-background-warning);
-  color: var(--alert-color-text-warning);
+  background: var(--tokens-alert-color-background-warning);
+  color: var(--tokens-alert-color-text-warning);
 }
 
 .alert--success {
-  background: var(--alert-color-background-success);
-  color: var(--alert-color-text-success);
+  background: var(--tokens-alert-color-background-success);
+  color: var(--tokens-alert-color-text-success);
 }
 
 .alert__grid {
@@ -59,19 +59,19 @@
 
 .alert__icon::before {
   display: block;
-  content: var(--alert-color-icon-info);
+  content: var(--tokens-alert-color-icon-info);
 }
 
 .alert--warning .alert__icon::before {
-  content: var(--alert-color-icon-warning);
+  content: var(--tokens-alert-color-icon-warning);
 }
 
 .alert--error .alert__icon::before {
-  content: var(--alert-color-icon-error);
+  content: var(--tokens-alert-color-icon-error);
 }
 
 .alert--success .alert__icon::before {
-  content: var(--alert-color-icon-success);
+  content: var(--tokens-alert-color-icon-success);
 }
 
 .alert__heading {
